add parameters to comments
